--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+
+  background-image: linear-gradient(to top, #333333 0%, #777777 100%);
+  color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.stats {
+  display: inline-flex;
+}
+
+.versus {
+  padding: 8rem 4rem;
+}
+
+.reset {
+  display: block;
+  padding: 2rem 2rem;
+}
+
+.Team, .Game {
+  background: rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(0, 0 ,0, 0.3);
+  padding: 1rem 2rem;
+}
+
+.Team {
+  width: 400px;
+}
+
+button {
+  background: #616161aa;
+  padding: 8px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  border: 1px solid rgba(0, 0 ,0, 0.5);
+  color: white;
+  font-size: 1rem;
+  width: 100%;
+}
+
+.reset button {
+  width: 50%;
 }
